Fixes logo spacing

--- a/app/css/components/hero-section.scss
+++ b/app/css/components/hero-section.scss
@@ -11,7 +11,7 @@
   &.-flowgrid {
     display: flex;
     flex-flow: row wrap;
-    padding-top: 50px;
+    padding-top: 20px;
     align-items: center;
     justify-content: center;
   }
