--- a/app/css/components/sponsor-logo.scss
+++ b/app/css/components/sponsor-logo.scss
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
     padding: 0;
+    margin: 20px;
   }
 
   > .logo {
